examples/kubernetes/multi-network/http-single-namespace/gateway-frontend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-frontend
spec:
  gatewayClassName: portail
  addresses:
  - type: portail.epheo.eu/Network
    value: udn-frontend
  listeners:
  - name: http
    port: 8080
    protocol: HTTP
